<resources>
    <string name="app_name">bgm514</string>
    <string name="bgm_developer_id">bgm18556097b70b84c73</string>
    <string name="monday">%1$d-%2$d 月</string>
    <string name="tuesday">%1$d-%2$d 火</string>
    <string name="wednesday">%1$d-%2$d 水</string>
    <string name="thursday">%1$d-%2$d 木</string>
    <string name="friday">%1$d-%2$d 金</string>
    <string name="saturday">%1$d-%2$d 土</string>
    <string name="sunday">%1$d-%2$d 日</string>
    <string name="banguminame_test">异世界魔王与召唤少女的奴隶魔术Omega</string>
    <string name="bangumi_calender_list_ranking">均分：%1$s  排名：%2$s</string>
    <string name="bangumi_list_picture_alter">番剧图片</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="subject_fragment_collections">%s：%s</string>
    <string name="subject_fragment_tvInfo">%s   均分%s（%s votes） \n rank %s</string>
    <string name="view_status_want">想看</string>
    <string name="view_status_watched">看过</string>
    <string name="view_status_watching">再看</string>
    <string name="view_status_placed">搁置</string>
    <string name="view_status_giveup">抛弃</string>
    <string name="SumItemInfo">集数信息</string>
    <string name="SumItemAmount">总集数</string>
    <string name="UpdatedSumValue">已更新</string>
    <string name="skectch_introduction">剧情介绍</string>
    <string name="located_character">登场角色</string>
    <string name="staff_character_textview">Staff角色</string>
    <string name="viewed_status_text">观看状态</string>
    <string name="long_to_select_view">长按选择状态</string>
    <string name="my_grade_view">我的评分</string>
    <string name="submit_str_btn">提交</string>
    <string name="people_avator">People avator</string>
    <string name="textview">TextView</string>
    <string name="anime">动画</string>
    <string name="books">书籍</string>
    <string name="sanjingenn">三次元</string>
    <string name="user_s_avator">user\'s avator</string>
    <string name="not_log_in">未登录</string>
    <string name="click_to_log_in">点击头像登录</string>
    <string name="input_text_area">输入搜索内容</string>
    <string name="subede">全部</string>
    <string name="book">书籍</string>
    <string name="music">音乐</string>
    <string name="game">游戏</string>
    <string name="sanjigenn">三次元</string>
    <string name="input_username_hint_text">请输入用户名或ID（注意不是昵称）</string>
    <string name="namahousou">每日放送</string>
    <string name="findmore">发现更多</string>
    <string name="progresskannri">进度管理</string>
    <string name="localcenter">个人中心</string>
</resources>