<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/timetableBtnGroupScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/TimeTable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="3dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/week_1"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingTop="8dp"
                android:paddingRight="3dp"
                android:paddingBottom="8dp"
                android:text="@string/monday" />

            <Button
                android:id="@+id/week_2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingTop="8dp"
                android:paddingRight="3dp"
                android:paddingBottom="8dp"
                android:text="@string/tuesday" />

            <Button
                android:id="@+id/week_3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingTop="8dp"
                android:paddingRight="3dp"
                android:paddingBottom="8dp"
                android:text="@string/wednesday" />

            <Button
                android:id="@+id/week_4"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingTop="8dp"
                android:paddingRight="3dp"
                android:paddingBottom="8dp"
                android:text="@string/thursday" />

            <Button
                android:id="@+id/week_5"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingTop="8dp"
                android:paddingRight="3dp"
                android:paddingBottom="8dp"
                android:text="@string/friday" />

            <Button
                android:id="@+id/week_6"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingTop="8dp"
                android:paddingRight="3dp"
                android:paddingBottom="8dp"
                android:text="@string/saturday" />

            <Button
                android:id="@+id/week_7"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:paddingTop="8dp"
                android:paddingRight="3dp"
                android:paddingBottom="8dp"
                android:text="@string/sunday" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </HorizontalScrollView>

    <!--    <LinearLayout-->
<!--        style="?android:attr/buttonBarStyle"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        -->
<!--    </LinearLayout>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timelineRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timetableBtnGroupScroll"
        tools:layout_editor_absoluteX="183dp" />

</androidx.constraintlayout.widget.ConstraintLayout>